# Backend/Workshop.Blazor.DataTransferObjects/DownloadFileDto.cs
@@ -1,0 +1,16 @@
+﻿using System.ComponentModel.DataAnnotations;
+
+namespace Workshop.Blazor.DataTransferObjects;
+
+public class DownloadFileDto
+{
+
+  public int Id { get; set; }
+
+  public string FileName { get; set; }
+
+  public string MimeType { get; set; }
+
+  public byte[] Data { get; set; }
+
+}
